Fix image alignment in featured header

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -322,6 +322,10 @@ main {
 
   .featured {
     max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
   }
 
